--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Hello Kitty in pink</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>Arelle</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">portfolio</a>
+          </li>
+        </ul>
+      </nav>
+
+      <main>
+        <!-- sidebar section-->
+         <div class="sidebar">
+          <img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTewqK1RUQe0ABOKXAwYrS40NdHL7Uwz-gg_Q&s">
+         </div>
+
+         <!--Content section-->
+         <div class="content">
+          <h2>Ashley Duartes</h2>
+          <p>5'1 with dimples</p>
+
+          <!-- Interests section-->
+           <div id="Interests">
+            <h3>What I Do</h3>
+            <ul>
+              <li>Volleyball Player</li>
+              <li>Youth Leader</li>
+              <li>Worship Team</li>
+            </ul>
+           </div>
+         </div>
+      </main>
     </div>
   </body>
 </html>
