--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>5'1 with dimples</p>
 
           <!-- Interests section-->
-           <div id="Interests">
+           <div id="interests">
             <h3>What I Do</h3>
             <ul>
               <li>Volleyball Player</li>
