--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
             <h1>Hello kitty in Pink</h1>
             <ul id="nav-ul">
            <li class=""nav-li">
-            <a href="index.html">Home</a>
+            <a href="0index.html">Home</a>
             </li>
             <li class="nav-li">
                 <a href="portfolio.html">Portfolio</a>
@@ -27,10 +27,10 @@
                     <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
                   </li>
                   <li>
-                    <a href="projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
+                    <a href="fsd-projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
                   </li>
                   <li>
-                    <a href="projects/circularity/">Circularity: A poetic motion experiment with circles</a>
+                    <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
                   </li>    
             </ul>
           </div>
