--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -9,11 +9,11 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(237, 63, 156);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
-			display: block;
+			display: block ;
 			position: absolute;
 			top: 100px;
 			/* Change me! */
